# pleasurepal-app

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  debug.dart  ff.io.dart  ffi.dart  login.dart  main.dart
lib/device/: backdoor_connector.dart  device_acuator_cubit.dart  device_cubit.dart  device_manager_bloc.dart  device_sensor_cubit.dart
lib/engine/: desktop_engine_provider.dart  engine_control_bloc.dart  engine_messages.dart  engine_provider.dart  engine_repo.dart  foreground_engine_provider.dart
lib/pleasurepal/: auth_bloc.dart  pleasurepal_events.dart  pleasurepal_events.g.dart  socket_bloc.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner/: Info.plist  (+1 more)
macos/Runner.xcodeproj/: project.pbxproj
native/: Cargo.toml  makefile  test.h
native/buttplug-rs.xcodeproj/: project.pbxproj
native/buttplug-rs.xcodeproj/project.xcworkspace/xcuserdata/moritzbecker.xcuserdatad/: UserInterfaceState.xcuserstate
native/buttplug-rs.xcodeproj/xcuserdata/moritzbecker.xcuserdatad/xcschemes/: xcschememanagement.plist
native/native.xcodeproj/: project.pbxproj
native/src/: api.rs  backdoor_server.rs  bridge_generated.io.rs  bridge_generated.rs  device_communication_managers.rs  engine.rs  error.rs  in_process_frontend.rs  lib.rs  options.rs
native/src/mobile_init/setup/: android.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+9 files in other folders)
