[package]
name = "buttplug-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
async-tungstenite = "0.20.0"
btleplug = "0.10.4"
buttplug = "7.0.2"
flutter_rust_bridge = "1.72.2"
futures = "0.3.28"
getset = "0.1.2"
lazy_static = "1.4.0"
once_cell = "1.17.1"
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = "1.27.0"
tokio-util = "0.7.7"
tracing = "0.1.37"
tracing-futures = "0.2.5"
